# ollamaDeepAgents

./: .env.example  .gitignore  AGENTS.md  ANALYSIS_messy_output.md  CHANGELOG.md  CLAUDE.md  INITIAL.md  README.md  TELEGRAM_POST.md  TELEGRAM_REPORT.md  TODO.md  pyproject.toml  test_tool_wrapper.py
PRPs/: README.md  netbox-deepagents-ollama.md
docs/: README.md  SESSION_SUMMARY.md  architecture.md  ollama-models.md
docs/archive/: README.md  telegram-report.md
docs/development/: 2026-05-04_streaming-fix.md  2026-05-05_claude-sdk-comparison.md  2026-06-03_langsmith-evaluation-research.md  2026-06-03_quickjs-code-interpreter-research.md  2026-06-08_self-hosting-gpu-rental-research.md  2026-06-14_deepagents-0.6-upgrade.md  2026-06-22_multi-repo-update-plan.md  README.md
docs/guides/: README.md  langsmith-skills-assessment.md  langsmith-tracing.md
docs/lineage/: README.md  context-engineering.md  no-subagents-rationale.md  tool-removal-results.md  validation-results-summary.md
docs/posts/: 2026-05-05_local-netbox-ai-assistant.md  2026-05-28_six-weeks-later.md  2026-06-03_langchain-post-eval-direction.md  2026-06-24_phase5-multi-model-observability.md  README.md
docs/reference/: README.md  architecture.md  mcp-constraints.md  model-compatibility.md
docs/setup/: README.md  langsmith-skills.md  langsmith.md  llamacpp.md  ollama-cloud.md
docs/traces/: 2026-05-04_019df45c_list-sites-before-fix.md  2026-05-04_comparison_streaming-fix.md  2026-05-05_019df7bd_rack-elevation-comparison.md  2026-05-12_019e1c19_rack-elevation-deepseek-cloud.md  README.md  (+6 more)
examples/: basic_usage.py  failed_query_recovery.py
scripts/: README.md  debug_streaming.py  fetch_run_details.py  verify_langsmith.py
src/: main.py
tests/: conftest.py  test_filters.py  test_netbox_integration.py  test_ollama_models.py
(+34 files in other folders)
